; ModuleID = '/home/carl/AnghaBench/mpv/options/extr_m_option.c_int64_get.c'
source_filename = "/home/carl/AnghaBench/mpv/options/extr_m_option.c_int64_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mpv_node = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32 }

@MPV_FORMAT_INT64 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, %struct.mpv_node*, i8*)* @int64_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @int64_get(i32* %0, i8* %1, %struct.mpv_node* %2, i8* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.mpv_node*, align 8
  %8 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store %struct.mpv_node* %2, %struct.mpv_node** %7, align 8
  store i8* %3, i8** %8, align 8
  %9 = load i32, i32* @MPV_FORMAT_INT64, align 4
  %10 = load %struct.mpv_node*, %struct.mpv_node** %7, align 8
  %11 = getelementptr inbounds %struct.mpv_node, %struct.mpv_node* %10, i32 0, i32 1
  store i32 %9, i32* %11, align 4
  %12 = load i8*, i8** %8, align 8
  %13 = bitcast i8* %12 to i32*
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.mpv_node*, %struct.mpv_node** %7, align 8
  %16 = getelementptr inbounds %struct.mpv_node, %struct.mpv_node* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  store i32 %14, i32* %17, align 4
  ret i32 1
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
